syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "auth.proto";
import "session_service.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service RegisterService {
    rpc RegisterUser(RegisterUserRequest) returns (V2LoginResponse) {}
}

message RegisterUserRequest {
    google.protobuf.Struct data = 1;
    string node_type = 2;
    string password = 3;
    string email = 4;
    string phone = 5;
    string resource_id = 6;
    double resource_type = 7;
    string environment_id = 8;
    string project_id = 9;
    string company_id = 10;
    string resource_environment_id = 11;
    string login = 12;
    string type = 13;
    string name = 14;
    string client_type_id = 15;
    string role_id = 16;
    string client_id = 17;
}
